test_suite/alan-2022-examples/failing/009250_mutation.alan
source o82 function while 4 do relax end() begin relax end begin relax end
